--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     name: Build PHP on ${{ matrix.operating-system }}
+    if: "!contains(github.event.head_commit.message, 'skip_build')"
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
