--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build PHP on ${{ matrix.operating-system }}
-    if: "!contains(github.event.head_commit.message, 'skip_build')"
+    if: "!contains(github.event.head_commit.message, 'skip-build')"
     runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
@@ -51,8 +51,8 @@ jobs:
         with:
           name: php_${{ matrix.php-version }}+${{ matrix.operating-system }}
           path: |
-            /home/runner/php/*.xz
-            /home/runner/php/*.zst
+            /usr/local/php/*.xz
+            /usr/local/php/*.zst
       - name: Test versions
         run: |
           php -v | head -n 1
