--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
         id: check
         run: |
           existing_version=$(curl -sL https://github.com/shivammathur/php-builder/releases/latest/download/php${{ matrix.php-version }}.log)
-          new_version=$(curl -sL https://api.github.com/repos/php/php-src/git/refs/tags | grep -Po "(php-${{ matrix.php-version }}.[0-9]+)\"" | tail -n 1 |cut -d '"' -f 1)
-          if [ "$new_version" != "$existing_version" ]; then
+          new_version=$(curl -sL https://www.php.net/releases/feed.php | grep -Po -m 1 "php-(${{ matrix.php-version }}.[0-9]+)" | head -n 1)
+          if [ "$new_version" != "$existing_version" ] || [[ "${{ github.event.head_commit.message }}" = *build-all* ]]; then
             echo "::set-output name=build::yes"
           else
             echo "::set-output name=build::no"
