--- a/.github/scripts/php-cgi.conf
+++ b/.github/scripts/php-cgi.conf
@@ -22,11 +22,4 @@
 # as a security measure, it's recommended to enable PHP just in the
 # specific virtual servers or just specific directories
 
-#ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
-#<Directory "/usr/lib/cgi-bin">
-#    AllowOverride None
-#    Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-#    Order allow,deny
-#    Allow from all
-#</Directory>
-#Action application/x-httpd-php /cgi-bin/phpPHP_VERSION
+Action application/x-httpd-php /cgi-bin/phpPHP_VERSION
