Fix php-fpm.conf [skip ci]

--- a/.github/scripts/php-fpm.conf
+++ b/.github/scripts/php-fpm.conf
@@ -7,7 +7,9 @@
     </IfModule>
 
     <FilesMatch ".+\.ph(ar|p|tml)$">
-        SetHandler "proxy:unix:/run/php/phpPHP_VERSION-fpm.sock|fcgi://localhost"
+        <If "-f %{REQUEST_FILENAME}">
+            SetHandler "proxy:unix:/run/php/phpPHP_VERSION-fpm.sock|fcgi://localhost"
+        </If>        
     </FilesMatch>
     <FilesMatch ".+\.phps$">
         # Deny access to raw php sources by default
